--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
-  }
+  },
+  "main": "index.js",
+  "author": "jonathancaleb <jonathancaleb230@gmail.com>",
+  "license": "MIT"
 }
